--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
           </figcaption>
         </figure>
         <p>과학과 기술의 도움을 받아 임은비는 스스로를 교육하고 스킬을 향상시켰다. 끝없는 노력 끝에 그녀는 도시 밖으로 나가 집을 구매하는 데 필요한 자금을 모았다. 그리고 그녀의 꿈은 이루어졌다. 그녀는
-          지금 자신만의 집을 소유하고 있으며, 그 집은 향후 더 나은 미래를 향한 출발점이 되고 있다. <span class="citation">임은비는 말한다. "과학의 발전이 이루지 못한 꿈은 없다.
-            우리는 기술의 힘을 믿고, 끊임없는 노력으로 우리의 목표를 달성할 수 있다. 나의 꿈은 나를 이곳까지 이끈 힘의 상징이며, 이 집은 나의 노력과 열정을 기록한 공간이다."</span>
+          지금 자신만의 집을 소유하고 있으며, 그 집은 향후 더 나은 미래를 향한 출발점이 되고 있다. <span class="citation">"Dream come ture"</span>
           임은비는 이제 미래를 밝게 보며 도시의 변화를 이끌고 있으며, 그녀의 이야기는 모든 이에게 희망을 심어주고 있다. 그녀의 성취는 도시와 함께 빛나는 미래로 향한 첫 걸음일 뿐이다.</p>
       </div>
       <div class="collumn">
